--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "preview": "astro preview",
     "format": "prettier . --write",
     "check": "prettier . --check",
+    "new:post": "node scripts/new-content.mjs post",
+    "new:project": "node scripts/new-content.mjs project",
     "astro": "astro"
   },
   "dependencies": {
@@ -35,7 +37,9 @@
     "pagefind": "^1.4.0",
     "prettier": "^3.7.4",
     "prettier-plugin-astro": "^0.14.1",
+    "rehype-pretty-code": "^0.14.1",
     "shadcn": "^3.6.3",
+    "shiki": "^3.21.0",
     "tailwindcss-animate": "^1.0.7",
     "tw-animate-css": "^1.4.0"
   }
