Fix theme flicker during view transitions

--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
     "analyze": "set ANALYZE_BUNDLE=true&& astro build",
     "format": "prettier . --write",
     "check": "prettier . --check",
-    "new:post": "node scripts/new-content.mjs post --",
-    "new:project": "node scripts/new-content.mjs project --",
+    "new:post": "node scripts/new-content.mjs post",
+    "new:project": "node scripts/new-content.mjs project",
     "astro": "astro"
   },
   "dependencies": {
